--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>569</width>
-    <height>361</height>
+    <width>568</width>
+    <height>516</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -31,23 +31,46 @@
       <property name="spacing" >
        <number>6</number>
       </property>
-      <item row="3" column="1" >
-       <widget class="QLineEdit" name="m_serveurWebLineEdit" >
-        <property name="enabled" >
-         <bool>false</bool>
-        </property>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_7" >
         <property name="text" >
-         <string>http://localhost:8888/gce/services/</string>
+         <string>Project &amp;Type :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectTypeCombo</cstring>
         </property>
        </widget>
       </item>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="label_8" >
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_3" >
         <property name="text" >
-         <string>&amp;Serveur :</string>
+         <string>Project &amp;Directory :</string>
         </property>
         <property name="buddy" >
-         <cstring>m_serveurWebLineEdit</cstring>
+         <cstring>m_projectLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QLineEdit" name="m_nameLineEdit" />
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label_6" >
+        <property name="text" >
+         <string>Project &amp;Name :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_nameLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <widget class="QLineEdit" name="m_projectLineEdit" />
+      </item>
+      <item row="1" column="2" >
+       <widget class="QToolButton" name="m_projectButton" >
+        <property name="text" >
+         <string>...</string>
         </property>
        </widget>
       </item>
@@ -63,49 +86,6 @@
           <string>Module Services</string>
          </property>
         </item>
-       </widget>
-      </item>
-      <item row="1" column="2" >
-       <widget class="QToolButton" name="m_projectButton" >
-        <property name="text" >
-         <string>...</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" >
-       <widget class="QLineEdit" name="m_projectLineEdit" />
-      </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label_6" >
-        <property name="text" >
-         <string>Project &amp;Name :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_nameLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="QLineEdit" name="m_nameLineEdit" />
-      </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>Project &amp;Directory :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_7" >
-        <property name="text" >
-         <string>Project &amp;Type :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectTypeCombo</cstring>
-        </property>
        </widget>
       </item>
      </layout>
@@ -214,6 +194,49 @@
          </property>
         </item>
        </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="m_webServiceGroupBox" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
+     <property name="title" >
+      <string>WebServices</string>
+     </property>
+     <layout class="QGridLayout" >
+      <property name="margin" >
+       <number>9</number>
+      </property>
+      <property name="spacing" >
+       <number>6</number>
+      </property>
+      <item row="1" column="1" >
+       <widget class="QToolButton" name="m_webServiceBtnDel" >
+        <property name="text" >
+         <string>Supprimer</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QToolButton" name="m_webServiceBtnAdd" >
+        <property name="sizePolicy" >
+         <sizepolicy>
+          <hsizetype>5</hsizetype>
+          <vsizetype>0</vsizetype>
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text" >
+         <string>Ajouter</string>
+        </property>
+       </widget>
+      </item>
+      <item rowspan="2" row="0" column="0" >
+       <widget class="QListWidget" name="m_webServiceList" />
       </item>
      </layout>
     </widget>
