--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -31,47 +31,38 @@
       <property name="spacing" >
        <number>6</number>
       </property>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_7" >
+      <item row="3" column="0" >
+       <widget class="QLabel" name="label_8" >
         <property name="text" >
-         <string>Project &amp;Type :</string>
+         <string>Project &amp;Version :</string>
         </property>
         <property name="buddy" >
-         <cstring>m_projectTypeCombo</cstring>
+         <cstring>m_projectVersionCombo</cstring>
         </property>
        </widget>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>Project &amp;Directory :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_projectLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" >
-       <widget class="QLineEdit" name="m_nameLineEdit" />
-      </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label_6" >
-        <property name="text" >
-         <string>Project &amp;Name :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_nameLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" >
-       <widget class="QLineEdit" name="m_projectLineEdit" />
-      </item>
-      <item row="1" column="2" >
-       <widget class="QToolButton" name="m_projectButton" >
-        <property name="text" >
-         <string>...</string>
-        </property>
+      <item row="3" column="1" >
+       <widget class="QComboBox" name="m_projectVersionCombo" >
+        <item>
+         <property name="text" >
+          <string>Egx 500 ES1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>Egx 500 ES2</string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>GCE 110</string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>GCE 120</string>
+         </property>
+        </item>
        </widget>
       </item>
       <item row="2" column="1" >
@@ -86,6 +77,49 @@
           <string>Module Services</string>
          </property>
         </item>
+       </widget>
+      </item>
+      <item row="1" column="2" >
+       <widget class="QToolButton" name="m_projectButton" >
+        <property name="text" >
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" >
+       <widget class="QLineEdit" name="m_projectLineEdit" />
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label_6" >
+        <property name="text" >
+         <string>Project &amp;Name :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_nameLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" >
+       <widget class="QLineEdit" name="m_nameLineEdit" />
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Project &amp;Directory :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_7" >
+        <property name="text" >
+         <string>Project &amp;Type :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_projectTypeCombo</cstring>
+        </property>
        </widget>
       </item>
      </layout>
@@ -332,8 +366,13 @@
   <tabstop>m_nameLineEdit</tabstop>
   <tabstop>m_projectLineEdit</tabstop>
   <tabstop>m_projectButton</tabstop>
+  <tabstop>m_projectTypeCombo</tabstop>
+  <tabstop>m_projectVersionCombo</tabstop>
   <tabstop>m_langComboBox</tabstop>
   <tabstop>m_navigatorComboBox</tabstop>
+  <tabstop>m_webServiceList</tabstop>
+  <tabstop>m_webServiceBtnAdd</tabstop>
+  <tabstop>m_webServiceBtnDel</tabstop>
   <tabstop>m_specifiquePathLineEdit</tabstop>
   <tabstop>m_specifiquePathButton</tabstop>
   <tabstop>m_prefixLineEdit</tabstop>
@@ -351,8 +390,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>224</x>
-     <y>388</y>
+     <x>474</x>
+     <y>502</y>
     </hint>
     <hint type="destinationlabel" >
      <x>96</x>
@@ -367,8 +406,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>307</x>
-     <y>388</y>
+     <x>557</x>
+     <y>502</y>
     </hint>
     <hint type="destinationlabel" >
      <x>179</x>
