--- a/ui/javaobjectfile.ui
+++ b/ui/javaobjectfile.ui
@@ -1,10 +1,6 @@
 <ui version="4.0" >
- <author>Ulrich Van Den Hekke</author>
  <class>JavaObjectFile</class>
  <widget class="QDialog" name="JavaObjectFile" >
-  <property name="windowModality" >
-   <enum>Qt::WindowModal</enum>
-  </property>
   <property name="geometry" >
    <rect>
     <x>0</x>
@@ -14,7 +10,7 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Dialog</string>
+   <string>Java Object Files</string>
   </property>
   <property name="modal" >
    <bool>true</bool>
@@ -109,31 +105,6 @@
        <property name="sortingEnabled" >
         <bool>true</bool>
        </property>
-       <item>
-        <property name="text" >
-         <string>JEveView</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>JEvlView</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>JEvmView</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>JEvpView</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>JTscView</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item>
