--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -183,7 +183,7 @@
       <number>6</number>
      </property>
      <item row="0" column="1" >
-      <widget class="QToolButton" name="toolButton" >
+      <widget class="QToolButton" name="m_webServicesRefreshBtn" >
        <property name="text" >
         <string>Refresh</string>
        </property>
