--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -250,7 +250,7 @@
       <item row="1" column="1" >
        <widget class="QToolButton" name="m_webServiceBtnDel" >
         <property name="text" >
-         <string>Supprimer</string>
+         <string>Delete link</string>
         </property>
        </widget>
       </item>
@@ -265,7 +265,7 @@
          </sizepolicy>
         </property>
         <property name="text" >
-         <string>Ajouter</string>
+         <string>Add link</string>
         </property>
        </widget>
       </item>
@@ -278,7 +278,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox_2" >
      <property name="title" >
-      <string>Specifique</string>
+      <string>Custom files</string>
      </property>
      <layout class="QGridLayout" >
       <property name="margin" >
@@ -293,7 +293,7 @@
       <item row="1" column="0" >
        <widget class="QLabel" name="label_5" >
         <property name="text" >
-         <string>Specifique p&amp;refix :</string>
+         <string>Custom p&amp;refix :</string>
         </property>
         <property name="buddy" >
          <cstring>m_prefixLineEdit</cstring>
@@ -306,7 +306,7 @@
       <item row="0" column="0" >
        <widget class="QLabel" name="label_4" >
         <property name="text" >
-         <string>Specifique d&amp;irectory :</string>
+         <string>Custom d&amp;irectory :</string>
         </property>
         <property name="buddy" >
          <cstring>m_specifiquePathLineEdit</cstring>
