--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -333,6 +333,12 @@
    </item>
    <item row="0" column="0" >
     <widget class="QListWidget" name="listWidget" >
+     <property name="minimumSize" >
+      <size>
+       <width>128</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="maximumSize" >
       <size>
        <width>128</width>
