Customization => L'application plante

--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -80,7 +80,7 @@
             </item>
             <item>
              <property name="text" >
-              <string>(fr) French</string>
+              <string>(fr_FR) French</string>
              </property>
             </item>
            </widget>
