--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>495</width>
-    <height>475</height>
+    <width>465</width>
+    <height>353</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -124,7 +124,7 @@
            <number>6</number>
           </property>
           <item row="1" column="3" >
-           <widget class="QToolButton" name="toolButton_2" >
+           <widget class="QToolButton" name="m_changeObjectPathBtn" >
             <property name="text" >
              <string>...</string>
             </property>
@@ -134,7 +134,7 @@
            <widget class="QLineEdit" name="m_objectDescriptionPathLineEdit" />
           </item>
           <item row="0" column="3" >
-           <widget class="QToolButton" name="toolButton" >
+           <widget class="QToolButton" name="m_changeProjectPathBtn" >
             <property name="text" >
              <string>...</string>
             </property>
@@ -325,7 +325,20 @@
         </widget>
        </item>
        <item>
-        <widget class="QTextEdit" name="m_exempleTextEdit" />
+        <widget class="QTextEdit" name="m_exempleTextEdit" >
+         <property name="lineWrapMode" >
+          <enum>QTextEdit::NoWrap</enum>
+         </property>
+         <property name="readOnly" >
+          <bool>true</bool>
+         </property>
+         <property name="tabStopWidth" >
+          <number>15</number>
+         </property>
+         <property name="acceptRichText" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -335,20 +348,20 @@
     <widget class="QListWidget" name="listWidget" >
      <property name="minimumSize" >
       <size>
-       <width>128</width>
+       <width>96</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize" >
       <size>
-       <width>128</width>
+       <width>96</width>
        <height>16777215</height>
       </size>
      </property>
      <property name="iconSize" >
       <size>
-       <width>96</width>
-       <height>84</height>
+       <width>60</width>
+       <height>60</height>
       </size>
      </property>
      <property name="movement" >
@@ -359,6 +372,12 @@
      </property>
      <property name="viewMode" >
       <enum>QListView::IconMode</enum>
+     </property>
+     <property name="wordWrap" >
+      <bool>true</bool>
+     </property>
+     <property name="currentRow" >
+      <number>0</number>
      </property>
      <item>
       <property name="text" >
