--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -346,6 +346,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="okButton" >
+       <property name="enabled" >
+        <bool>false</bool>
+       </property>
        <property name="text" >
         <string>OK</string>
        </property>
