--- a/ui/search.ui
+++ b/ui/search.ui
@@ -1,4 +1,5 @@
 <ui version="4.0" >
+ <author>Ulrich Van Den Hekke</author>
  <class>FindDialog</class>
  <widget class="QDialog" name="FindDialog" >
   <property name="geometry" >
@@ -6,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>454</width>
-    <height>264</height>
+    <height>268</height>
    </rect>
   </property>
   <property name="windowTitle" >
