--- a/ui/replace.ui
+++ b/ui/replace.ui
@@ -1,29 +1,25 @@
 <ui version="4.0" >
- <author>Ulrich Van Den Hekke</author>
- <class>FindDialog</class>
- <widget class="QDialog" name="FindDialog" >
+ <class>ReplaceDialog</class>
+ <widget class="QDialog" name="ReplaceDialog" >
   <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>454</width>
-    <height>268</height>
+    <width>518</width>
+    <height>262</height>
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Find a text</string>
+   <string>Find or Replace a text</string>
   </property>
-  <property name="modal" >
-   <bool>true</bool>
-  </property>
-  <layout class="QGridLayout" >
+  <layout class="QVBoxLayout" >
    <property name="margin" >
     <number>9</number>
    </property>
    <property name="spacing" >
     <number>6</number>
    </property>
-   <item row="0" column="0" >
+   <item>
     <layout class="QGridLayout" >
      <property name="margin" >
       <number>0</number>
@@ -31,7 +27,14 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <item row="0" column="1" colspan="2" >
+     <item row="1" column="0" >
+      <widget class="QCheckBox" name="m_replaceCheckBox" >
+       <property name="text" >
+        <string>&amp;Replace by :</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" >
       <widget class="QComboBox" name="m_comboFind" >
        <property name="editable" >
         <bool>true</bool>
@@ -56,14 +59,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0" >
-      <widget class="QCheckBox" name="m_replaceCheckBox" >
-       <property name="text" >
-        <string>&amp;Replace by :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1" colspan="2" >
+     <item row="1" column="1" >
       <widget class="QComboBox" name="m_comboReplace" >
        <property name="enabled" >
         <bool>false</bool>
@@ -75,44 +71,7 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="0" >
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" >
-        <size>
-         <width>131</width>
-         <height>31</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="m_findButton" >
-       <property name="text" >
-        <string>Find</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="m_closeButton" >
-       <property name="text" >
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="1" column="0" >
+   <item>
     <layout class="QGridLayout" >
      <property name="margin" >
       <number>0</number>
@@ -120,18 +79,95 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <item row="0" column="1" >
+     <item row="1" column="1" >
       <spacer>
        <property name="orientation" >
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" >
         <size>
-         <width>40</width>
-         <height>20</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="0" column="1" >
+      <widget class="QGroupBox" name="m_directionGroupBox" >
+       <property name="title" >
+        <string>Direction</string>
+       </property>
+       <layout class="QVBoxLayout" >
+        <property name="margin" >
+         <number>9</number>
+        </property>
+        <property name="spacing" >
+         <number>6</number>
+        </property>
+        <item>
+         <widget class="QRadioButton" name="m_UpRadioButton" >
+          <property name="text" >
+           <string>Go up</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="m_DownRadioButton" >
+          <property name="text" >
+           <string>Go down</string>
+          </property>
+          <property name="checked" >
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item row="1" column="2" >
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="2" >
+      <widget class="QGroupBox" name="m_selectionGroupBox" >
+       <property name="title" >
+        <string>Extend</string>
+       </property>
+       <layout class="QVBoxLayout" >
+        <property name="margin" >
+         <number>9</number>
+        </property>
+        <property name="spacing" >
+         <number>6</number>
+        </property>
+        <item>
+         <widget class="QRadioButton" name="m_searchAllRadioButton" >
+          <property name="text" >
+           <string>All</string>
+          </property>
+          <property name="checked" >
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="m_searchSelectionRadioButton" >
+          <property name="text" >
+           <string>Selection</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </item>
      <item rowspan="2" row="0" column="0" >
       <widget class="QGroupBox" name="groupBox" >
@@ -173,59 +209,44 @@
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QCheckBox" name="m_backwardCheckBox" >
-          <property name="text" >
-           <string>Search &amp;backward</string>
-          </property>
-         </widget>
-        </item>
        </layout>
       </widget>
      </item>
-     <item row="1" column="2" >
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item>
       <spacer>
        <property name="orientation" >
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" >
         <size>
-         <width>20</width>
-         <height>40</height>
+         <width>131</width>
+         <height>31</height>
         </size>
        </property>
       </spacer>
      </item>
-     <item row="0" column="2" >
-      <widget class="QGroupBox" name="groupBox_3" >
-       <property name="title" >
-        <string>Extend</string>
+     <item>
+      <widget class="QPushButton" name="m_findButton" >
+       <property name="text" >
+        <string>Find</string>
        </property>
-       <layout class="QVBoxLayout" >
-        <property name="margin" >
-         <number>9</number>
-        </property>
-        <property name="spacing" >
-         <number>6</number>
-        </property>
-        <item>
-         <widget class="QRadioButton" name="m_searchAllRadioButton" >
-          <property name="text" >
-           <string>All</string>
-          </property>
-          <property name="checked" >
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QRadioButton" name="m_searchSelectionRadioButton" >
-          <property name="text" >
-           <string>Selection</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="m_closeButton" >
+       <property name="text" >
+        <string>Close</string>
+       </property>
       </widget>
      </item>
     </layout>
@@ -236,13 +257,14 @@
   <tabstop>m_comboFind</tabstop>
   <tabstop>m_replaceCheckBox</tabstop>
   <tabstop>m_comboReplace</tabstop>
-  <tabstop>m_searchAllRadioButton</tabstop>
-  <tabstop>m_searchSelectionRadioButton</tabstop>
   <tabstop>m_caseCheckBox</tabstop>
   <tabstop>m_fromStartCheckBox</tabstop>
   <tabstop>m_wholeWordsCheckBox</tabstop>
   <tabstop>m_regularExpressionCheckBox</tabstop>
-  <tabstop>m_regularExpressionCheckBox</tabstop>
+  <tabstop>m_UpRadioButton</tabstop>
+  <tabstop>m_DownRadioButton</tabstop>
+  <tabstop>m_searchAllRadioButton</tabstop>
+  <tabstop>m_searchSelectionRadioButton</tabstop>
   <tabstop>m_findButton</tabstop>
   <tabstop>m_closeButton</tabstop>
  </tabstops>
@@ -251,12 +273,12 @@
   <connection>
    <sender>m_findButton</sender>
    <signal>clicked()</signal>
-   <receiver>FindDialog</receiver>
+   <receiver>ReplaceDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>274</x>
-     <y>230</y>
+     <x>444</x>
+     <y>287</y>
     </hint>
     <hint type="destinationlabel" >
      <x>96</x>
@@ -267,16 +289,16 @@
   <connection>
    <sender>m_closeButton</sender>
    <signal>clicked()</signal>
-   <receiver>FindDialog</receiver>
+   <receiver>ReplaceDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>365</x>
-     <y>230</y>
+     <x>525</x>
+     <y>287</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>175</x>
-     <y>259</y>
+     <x>179</x>
+     <y>282</y>
     </hint>
    </hints>
   </connection>
@@ -287,28 +309,28 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>91</x>
-     <y>43</y>
+     <x>137</x>
+     <y>48</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>200</x>
-     <y>46</y>
+     <x>398</x>
+     <y>48</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>m_fromStartCheckBox</sender>
    <signal>toggled(bool)</signal>
-   <receiver>groupBox_3</receiver>
-   <slot>setDisabled(bool)</slot>
+   <receiver>m_DownRadioButton</receiver>
+   <slot>setOn(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>87</x>
-     <y>120</y>
+     <x>114</x>
+     <y>154</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>337</x>
-     <y>80</y>
+     <x>291</x>
+     <y>136</y>
     </hint>
    </hints>
   </connection>
@@ -319,12 +341,44 @@
    <slot>setOn(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>155</x>
-     <y>126</y>
+     <x>150</x>
+     <y>152</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>337</x>
-     <y>98</y>
+     <x>406</x>
+     <y>102</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_fromStartCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_UpRadioButton</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>193</x>
+     <y>147</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>291</x>
+     <y>107</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_fromStartCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_searchSelectionRadioButton</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>197</x>
+     <y>157</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>421</x>
+     <y>143</y>
     </hint>
    </hints>
   </connection>
@@ -335,12 +389,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>63</x>
-     <y>125</y>
+     <x>75</x>
+     <y>151</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>108</x>
-     <y>197</y>
+     <x>74</x>
+     <y>210</y>
     </hint>
    </hints>
   </connection>
