--- a/ui/newservicefile.ui
+++ b/ui/newservicefile.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>654</width>
-    <height>662</height>
+    <height>683</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -190,6 +190,29 @@
           <property name="spacing" >
            <number>6</number>
           </property>
+          <item>
+           <layout class="QHBoxLayout" >
+            <property name="margin" >
+             <number>0</number>
+            </property>
+            <property name="spacing" >
+             <number>6</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="label_10" >
+              <property name="text" >
+               <string>View&amp;Object Name :</string>
+              </property>
+              <property name="buddy" >
+               <cstring>m_viewObjectLineEdit</cstring>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="m_viewObjectLineEdit" />
+            </item>
+           </layout>
+          </item>
           <item>
            <layout class="QHBoxLayout" >
             <property name="margin" >
