--- a/ui/replace.ui
+++ b/ui/replace.ui
@@ -39,6 +39,12 @@
        <property name="editable" >
         <bool>true</bool>
        </property>
+       <property name="currentIndex" >
+        <number>-1</number>
+       </property>
+       <property name="insertPolicy" >
+        <enum>QComboBox::InsertAlphabetically</enum>
+       </property>
       </widget>
      </item>
      <item row="0" column="0" >
@@ -66,6 +72,9 @@
        </property>
        <property name="editable" >
         <bool>true</bool>
+       </property>
+       <property name="insertPolicy" >
+        <enum>QComboBox::InsertAlphabetically</enum>
        </property>
       </widget>
      </item>
